# geoip-vmod

./: README  autogen.sh  configure.ac
man/: Makefile.am  vmod_geoip.3  vmod_geoip.rst
src/: Makefile.am  vmod_geoip.c  vmod_geoip.vcc
src/tests/: test01.vtc
